2008-01-28  Alexander Larsson  <alexl@redhat.com>

        * giomodule.[ch]:
        * gio.symbols:
	Add registration hooks for extension points.
	Register the gio extension points.
	
        * fam/gfamdirectorymonitor.c:
        * fam/gfamfilemonitor.c:
        * glocaldirectorymonitor.[ch]:
        * glocalfilemonitor.[ch]:
        * gnativevolumemonitor.h:
        * gunionvolumemonitor.c:
        * gunixvolumemonitor.c:
        * gvfs.[ch]:
        * gvolumemonitor.h:
        * inotify/ginotifydirectorymonitor.c:
        * inotify/ginotifyfilemonitor.c:
	Use the extension points registration instead
	of g_type_children().

2008-01-28  Matthias Clasen  <mclasen@redhat.com>
	
	* gdrive.[hc]: 
	* gvolume.[hc]: Document new API. 

	* gfile.c (g_file_copy_async): Fix docs

2008-01-27  Matthias Clasen  <mclasen@redhat.com>

	* gbufferedinputstream.c:
	* ginputstream.c:
	* goutputstream.c: Replace uses of G_GNUC_PRETTY_FUNCTION by
	__FUNCTION__.
	
2008-01-27  Matthias Clasen  <mclasen@redhat.com>

	* glocalfile.c: Avoid trivial differences in translatable strings.

2008-01-25  Matthias Clasen  <mclasen@redhat.com>

	* fam/fam-helper.c (fam_event_to_file_monitor_event): Make this
	build with gcc 3.4  (#509419)

2008-01-25  Matthias Clasen  <mclasen@redhat.com>

	* gfilemonitor.c: Add references to g_file_monitor_file/directory()
	(#509994, Murray Cumming)

2008-01-25  Matthias Clasen  <mclasen@redhat.com>

	* gioscheduler.h: Make GIOSchedulerJobFunc return boolean
	* gioscheduler.c: Keep calling io jobs until they return FALSE;
	this allows big jobs to be executed in chunks, instead of blocking
	the main loop for a long time.

	* gsimpleasyncresult.c:
	* giofile.c: Adapt callers.

2008-01-25  Alexander Larsson  <alexl@redhat.com>

        * gdesktopappinfo.c:
	Implement changes discussed on xdg list.
	Now we can add supported mimetypes by just using defaults.list
	We can also remove associations in defaults.list.

2008-01-25  Alexander Larsson  <alexl@redhat.com>
