@@ -1,3 +1,8 @@
+2008-01-28  Matthias Clasen  <mclasen@redhat.com>
+
+	* tests/g-file.c: Disable some tests that are failing in
+	the absence of a http backend.
+
 2008-01-28  Alexander Larsson  <alexl@redhat.com>
 
         * giomodule.[ch]:
